2003-06-05  Dave Love  <fx@gnu.org>

	* vc-hooks.el (vc-make-backup-files): Add :group backup.

2003-06-05  Kim F. Storm  <storm@cua.dk>

	* info.el (Info-fontify-node): Individually refill menus and
	paragraphs to preserve menu items and varying indentation.
	Only color first 9 menu items differently.

2003-06-05  Juanma Barranquero  <lektu@terra.es>

	* desktop.el: Add new maintainer.

2003-06-04  Jason Rumney  <jasonr@gnu.org>

	* mwheel.el (mouse-wheel-down-event, mouse-wheel-up-event):
	Default to new wheel-up and wheel-down events on MacOS.

	* term/mac-win.el: No need to bind wheel events specially.

2003-06-04  Luc Teirlinck  <teirllm@mail.auburn.edu>

	* simple.el (yank-excluded-properties): Expand documentation
	string.

2003-06-04  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/lisp-mnt.el (lm-keywords-finder-p):
	Use with-no-warnings.

	* gud.el (gud-minor-mode-type): Move defvar up.

	* progmodes/compile.el (compilation-next-error): When moving fwd,
	compare position of point with the errors.

	* dired.el (dired-get-filename): Err for . and .. in usual case.
	(dired-get-file-for-visit): Specify no-error to dired-get-filename,
	and check for real errors here.
	(dired-unmark-all-files): Specify no-error to dired-get-filename.

	* buff-menu.el (list-buffers-noselect): Use window-inside-edges
	to compute the number of offset spaces.
	(list-buffers-noselect): Use Buffer-menu-buffer+size to
	indent the dashes properly.  Put some in fixed-pitch.

2003-06-04  Lars Hansen  <larsh@math.ku.dk>

	* desktop.el (desktop-create-buffer): Undo last change.
	(desktop-kill, desktop-save, desktop-remove): Use expand-directory
	rather than concat to construct desktop filename.
	(desktop-kill, desktop-read, desktop-change-dir):
	Ensure desktop-dirname is a directory name.
	(desktop-change-dir): Fix bug when DIR was relative.

2003-06-04  Alex Coventry  <alex_c@mit.edu>  (tiny change)

	* files.el (after-find-file): Fix arguments of call to `sit-for'.
