@@ -1,3 +1,10 @@
+2003-06-05  Lute Kamstra  <Lute.Kamstra@cwi.nl>
+
+	* shell.el (shell-mode): Put `shell-filter-ctrl-a-ctrl-b' on
+	`comint-output-filter-functions' when bash is used as the inferior
+	shell.
+	(shell-filter-ctrl-a-ctrl-b): New function.
+
 2003-06-05  Dave Love  <fx@gnu.org>
 
 	* vc-hooks.el (vc-make-backup-files): Add :group backup.
